--- a/app/stylesheets/app.css
+++ b/app/stylesheets/app.css
@@ -1,8 +1,20 @@
 body {
-  margin-left: 25%;
-  margin-right: 25%;
-  margin-top: 10%;
+  margin-left: 45%;
+  margin-right: 45%;
+  margin-top: 5%;
   font-family: "Open Sans", sans-serif;
+}
+
+.table {
+  margin-top: 50px;
+}
+
+h1 {
+  font-size: 30pt;
+}
+
+li,td {
+  font-size: 15pt;
 }
 
 label {
